# AME-by-diffusion

./: .coverage  .gitignore  PYTEST_GUIDE.md  README.md  benchmark.py  generate_training_data.py  loss.py  main.py  pyproject.toml  pytest.ini
data/: AME_4_3_diffusion.mtx  AME_4_6_state_vector.npy
src/: __init__.py  benchmark.py  config.py  loss.py  main.py
src/core/: __init__.py  functions.py  loss.py
src/models/: __init__.py  mlp.py  unet.py
src/quantum_diffusion_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/unet/: unet.py
src/utils/: __init__.py  benchmark.py  data.py
tests/: conftest.py  test.py  test_functions.py  test_integration.py  test_loss.py  test_models.py  test_utils.py
